--- a/.github/workflows/go-ci.yaml
+++ b/.github/workflows/go-ci.yaml
@@ -2,9 +2,9 @@ name: Run Tests
 
 on:
   push:
-    branches: [ * ]
+    branches: [ ** ]
   pull_request:
-    branches: [ * ]
+    branches: [ ** ]
 
 jobs:
   lint:
