--- a/.github/workflows/go-ci.yaml
+++ b/.github/workflows/go-ci.yaml
@@ -7,20 +7,20 @@ on:
     branches: [ '*' ]
 
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Setup go
-        uses: actions/setup-go@v2
-        with:
-          go-version: '1.18'
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Setup golangci-lint
-        uses: golangci/golangci-lint-action@v3.2.0
-        with:
-          version: v1.45.0
-          args: --verbose
+#   lint:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Setup go
+#         uses: actions/setup-go@v2
+#         with:
+#           go-version: '1.18'
+#       - name: Checkout repository
+#         uses: actions/checkout@v2
+#       - name: Setup golangci-lint
+#         uses: golangci/golangci-lint-action@v3.2.0
+#         with:
+#           version: v1.45.0
+#           args: --verbose
   test:
     name: build and test
     runs-on: ubuntu-latest
@@ -36,5 +36,5 @@ jobs:
       - name: Run Tests
         run: go test ./...
 
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v2
+#       - name: Upload coverage to Codecov
+#         uses: codecov/codecov-action@v2
