--- a/.github/workflows/go-ci.yaml
+++ b/.github/workflows/go-ci.yaml
@@ -32,6 +32,9 @@ jobs:
 
       - name: Checkout Code
         uses: actions/checkout@v2
+      
+      - name: get package
+        run: go get
 
       - name: Run Tests
         run: go test ./...
